--- a/scientists/ainstein.html
+++ b/scientists/ainstein.html
@@ -34,4 +34,5 @@
         Служба технической поддержки - <a href="mailto:andrewskv1995@mail.ru">andrewskv1995@mail.ru</a></span></div>
     </footer>
 </body>
+<!-- Изменение -->
 </html>
