--- a/scientists/darvin.html
+++ b/scientists/darvin.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
  <html>
  <head>
-     <meta charset="utf-8">
+<!-- Изменение --> 
+    <meta charset="utf-8">
      <meta name="viewport" content="initial-scale=1.0, width=device-width">
      <meta http-equiv="X-UA-Compatible" content=" ie=edge">
      <title>Charles Darwin</title>
